--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,8 @@
     </dependencies>
 
     <build>
+        <finalName>${project.artifactId}</finalName>
+
         <plugins>
             <plugin>
                 <!-- https://stackoverflow.com/a/53433724 -->
